Fixed wrong js entry in index.html added vue router fixed webpack mismatching node fs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <script>window.$ = window.jQuery = require('jquery')</script>
         <script src="static/semantic.js"></script>
-        <script src="dist/build.js"></script>
+        <script src="dist/app.js"></script>
     </body>
 
 </html>
