updated semantic ui pahts

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
     <head>
+        <meta charset="UTF-8">
         <title>PerAspera</title>
-        <link rel="stylesheet" href="static/semantic.css">
+        <link rel="stylesheet" href="static/semantic.min.css">        
         <link rel="stylesheet" href="static/style.css">
     </head>
 
@@ -13,7 +14,7 @@
         </div>
 
         <script>window.$ = window.jQuery = require('jquery')</script>
-        <script src="static/semantic.js"></script>
+        <script src="static/semantic.min.js"></script>
         <script src="dist/app.js"></script>
     </body>
 
